tests/ui/has-generics.rs
polygraph::schema!{
    pub struct Struct<T>(T);
}

fn main() {
}
